--- a/resume/data.yml
+++ b/resume/data.yml
@@ -1,98 +1,49 @@
 /* #*/ export const PERSON = `
-# Any fields left unchanged, please delete so your resume is fully yours!
-
 name:
-  first: John
+  first: Kevin
   middle:
-  last: Doe
-about: Hi, my name is John Doe. I'm just about the most boring type of person you could
-       possibly imagine. I like collecting leaves from the tree in my back yard and documenting
-       each time I eat a peanut that is non-uniform. I am not a robot. Please hire me.
-position: Software Developer
+  last: Chen
+position: Senior .NET Full Stack Developer
 
 birth:
-  year: 1990
-  location: New York
-
-# you may add more experiences by duplicating the template
+  year: 1988
+  location: New Zealand
 
 experience:
-- company: Company A
-  position: Developer
-  timeperiod: since January 2016
-  description: Programming and watching cute cat videos.
-  website: https://example.com
-
-- company: Company B
-  position: Frontend Developer
-  timeperiod: January 2015 - December 2015
-  description: Fulfillment of extremely important tasks.
-
-- company: Company C
-  position: Trainee
-  timeperiod: March 2014 - December 2014
-  description: Making coffee and baking cookies.
+- company: Urgent Courier Ltd
+  position: Senior .NET Developer
+  timeperiod: 2010 - Present
+  description: |
+    • Led development and maintenance of mission-critical logistics management systems using .NET technology stack
+    • Designed and implemented scalable web applications using .NET Core/.NET 5+ and Angular
+    • Developed complex stored procedures and database solutions in SQL Server
+    • Implemented real-time tracking and delivery management features serving 1000+ daily users
+    • Optimized database performance resulting in 40% improvement in query response time
+    • Mentored junior developers and conducted code reviews to ensure best practices
 
 education:
-- degree: Master of Arts
-  timeperiod: March 2012 - December 2013
-  description: Major in Hacking and Computer Penetration, University A, New York, USA.
-  website: https://example.com
+- degree: Bachelor of Information Technology
+  timeperiod: 2007 - 2010
+  description: Whitireia Community Polytechnic, New Zealand
 
-- degree: Bachelor of Science
-  timeperiod: March 2009 - December 2011
-  description: Major in Engineering, University B, Los Angeles, USA.
-
-# skill level goes from 0 to 100
 skills:
-- name: HTML5
-  level: 99
-- name: CSS3
+- name: Backend Development
   level: 95
-- name: JavaScript
-  level: 97
-- name: Node.js
-  level: 93
-- name: Angular 2
-  level: 60
-- name: TypeScript
+- name: Database Management
+  level: 90
+- name: Frontend Development
+  level: 85
+- name: DevOps & Tools
   level: 80
-- name: ES.Next
-  level: 70
-- name: Docker
-  level: 99
-knowledge: Also proficient in Adobe Photoshop and Illustrator, grew up bilingual
-  (English and Klingon).
 
-projects:
-- name: best-resume-ever
-  platform: Vue
-  timeperiod: February 2016
-  description: 👔 💼 Build fast 🚀 and easy multiple beautiful resumes and create your best CV ever! Made with Vue and LESS.
-  url: https://github.com/salomonelli/best-resume-ever
-
-# optional, not all resume templates have hobbies included
-hobbies:
-- name: Video Games
-  iconClass: fa fa-gamepad
-  url: https://example.com
-
-- name: Drawing
-  iconClass: fa fa-pencil
-  url: https://example.com
-
-contributions:
-- name: best-resume-ever
-  description: 👔 💼 Build fast 🚀 and easy multiple beautiful resumes.
-  url: https://github.com/salomonelli/best-resume-ever
+knowledge: Extensive experience in .NET Core, C#, SQL Server, Angular, and DevOps practices. Strong background in logistics systems development.
 
 contact:
-  email: john.doe@email.com
-  phone: 0123 456789
-  street: 1234 Broadway
-  city: New York
-  website: johndoe.com
-  github: johnyD
-# en, de, fr, pt, ca, cn, it, es, th, pt-br, ru, sv, id, hu, pl, ja, ka, nl, he, zh-tw, lt, ko, el, nb-no
+  email: chenning.0515@gmail.com
+  phone: +64 21 0399013
+  street: 18 Gretl Pl, Hillcrest
+  city: Auckland
+  website: https://kevindemo.github.io/cv/
+
 lang: en
 `
