--- a/resume/data.yml
+++ b/resume/data.yml
@@ -7,7 +7,7 @@ position: Senior .NET Full Stack Developer
 
 birth:
   year: 1988
-  location: New Zealand
+  location: China
 
 experience:
 - company: Urgent Courier Ltd
