--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "docs": "node build/build.js",
     "docs:serve": "cd docs/ && ws --port 8080 --rewrite '/best-resume-ever/* -> /$1'",
-    "dev": "node build/dev-server.js",
+    "dev": "cross-env NODE_OPTIONS='--openssl-legacy-provider' node build/dev-server.js",
     "start": "node build/dev-server.js",
     "pdf": "node scripts/export.js",
     "preview": "node scripts/preview.js",
@@ -53,6 +53,7 @@
     "connect-history-api-fallback": "1.5.0",
     "copy-webpack-plugin": "4.5.2",
     "cpx": "1.5.0",
+    "cross-env": "^7.0.3",
     "css-loader": "1.0.0",
     "escope": "3.6.0",
     "eslint": "5.6.0",
